Fixed alignment on movie show

--- a/app/assets/stylesheets/pages/_movie_show.scss
+++ b/app/assets/stylesheets/pages/_movie_show.scss
@@ -1,7 +1,7 @@
 .container-event-show {
   display: flex;
   margin: 2rem 10%;
-  width: 80%
+  width: 80%;
   justify-content: space-evenly;
 }
 
